관리자 페이지 전체적으로 기능 정상화함