@@ -1,11 +1,13 @@
 package com.example.itview_spring.Service;
 
 import com.example.itview_spring.Constant.Replyable;
+import com.example.itview_spring.DTO.PersonDTO;
 import com.example.itview_spring.DTO.PersonResponseDTO;
 import com.example.itview_spring.Entity.PersonEntity;
 import com.example.itview_spring.Repository.LikeRepository;
 import com.example.itview_spring.Repository.PersonRepository;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Example;
 import org.springframework.data.domain.ExampleMatcher;
 import org.springframework.data.domain.Page;
@@ -19,23 +21,24 @@ public class PersonService {
 
     private final PersonRepository personRepository;
     private final LikeRepository likeRepository;
+    private final ModelMapper modelMapper;
 
-    public Page<PersonEntity> list(Pageable pageable, String keyword) {
-        if (keyword == null || keyword.isBlank()) {
-            return personRepository.findAll(pageable);
+    @Transactional(readOnly = true) // 읽기 전용으로 설정하는 것이 성능에 좋습니다.
+    public Page<PersonDTO> list(String keyword, Pageable pageable) {
+
+        // 검색어가 유효하면 (null이 아니고 비어있지 않으면)
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            // 1. DTO를 반환하는 @Query 메서드 사용 (정렬 로직 포함)
+            return personRepository.searchPersons(keyword, pageable);
+        } else {
+            // 2. 검색 조건이 없으면 findAll()을 호출하고 DTO로 변환
+
+            // PersonEntity를 조회합니다.
+            Page<PersonEntity> personEntities = personRepository.findAll(pageable);
+
+            // 조회된 Entity를 DTO로 매핑합니다.
+            return personEntities.map(entity -> modelMapper.map(entity, PersonDTO.class));
         }
-
-        ExampleMatcher matcher = ExampleMatcher.matchingAny()
-                .withIgnoreNullValues()
-                .withIgnoreCase()
-                .withMatcher("name", m -> m.contains())
-                .withMatcher("profile", m -> m.contains())
-                .withMatcher("job", m -> m.contains());
-        PersonEntity probe = new PersonEntity();
-        probe.setName(keyword);
-        probe.setProfile(keyword);
-        probe.setJob(keyword);
-        return personRepository.findAll(Example.of(probe, matcher), pageable);
     }
 
     public PersonEntity get(Integer personId) {
